flux/apps/questarr/httproute.enc.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
    name: questarr
    namespace: gaming
spec:
    parentRefs:
        - name: traefik-gateway
          namespace: system-addon
    hostnames:
        - ENC[AES256_GCM,data:SSMAq03XXoVOkQq8hJEw99kTbFBYnZcMQJxWMJI4,iv:RRYiMlicmP+3CgKK53iCfVSgJuhhLaxkkIwjlNylsss=,tag:5gUHglsCBB00xL7pesr/ng==,type:str]
    rules:
        - matches:
            - path:
                type: PathPrefix
                value: /
          backendRefs:
            - name: questarr
              port: 5000
sops:
    age:
        - recipient: age15kgnnd0nlu5vxerhfcrzh5y77x7efudnk74sk4d6z3zn29yltc5q25r54a
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBRQUJ1UW41aWlISWE1TzB3
[...]
            OC1HlcixWCVEPAdqr5DgtIUg4jzsUUdlCPAmIQZivJAUrVxKHoozlQ==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2026-04-22T16:22:46Z"
    mac: ENC[AES256_GCM,data:dBbxe8bey8LH5JF+IP0HQbLVyMlIAuNOgOhVqVMlzJ6eH6pyxCkK7imkMTNns1prsuJ88I3AoRgaZ9u7Gu5b2EWrvKG01u3cyhcjsrCBzyfr3ekAdlhrfYru7tUrE82wHE2/mtGktIPwoku6YqdU4CwZYwDA8nQ8GrfgHs7kW0A=,iv:RJuf1mzAbhLIaizJO78fSVk/xzj1RpPisH3yHkt+xoE=,tag:Pjzv2OS5ALaQuNASYxugOw==,type:str]
    encrypted_regex: hostnames|0
    version: 3.12.2
